# distribution-zoo-v2

./: .gitignore  LICENSE  README.md  custom.css  homepage_analytics.md  homepage_authors.md  main.py  pyproject.toml
.github/workflows/: test-code.yml  test-os.yml  test-python.yml
distribution_zoo/: __init__.py  base_distribution.py  distribution_class.py  lang.py  text_substitutions.py  utils.py
distribution_zoo/cont_uni/: __init__.py  gamma.py  normal.py
distribution_zoo/cont_uni/code/: cpp.md  python.md
distribution_zoo/cont_uni/normal/: formulae.md  latex.md  tips.md
distribution_zoo/cont_uni/normal/code/: cpp.md  python.md
distribution_zoo/disc_uni/: __init__.py  poisson.py
distribution_zoo/mult/: dirichlet.py
tests/: extract.py  test.py  test_landing_page.py  utils.py  validate_code_output.py
