[tool.poetry]
name = "distribution_zoo"
version = "0.0.1"
description = "Explore statistical distributions"
authors = ["Fergus Cooper"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
inflection = "^0.5.1"
pandas = "^2.1.4"
altair = "^5.2.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
